openbank-infra/gitops/components/context/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: context
  labels:
    openbank.io/plane: app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
